syntax = "proto3";
package proto;
import "google/protobuf/wrappers.proto";

message Article {
  int64 id = 1;
  string title = 2;
  string description = 3;
  int64 fkUser = 4;
  string createdAt = 5;
  string updatedAt = 6;
  google.protobuf.StringValue deletedAt = 7;
}

message GetArticlesRequest {

}

message GetArticlesResponse {
  repeated Article articles = 1;
}

message GetArticleRequest {
  int64 id = 1;
}

message GetArticleResponse {
  Article response = 1;
}

service ArticleService {
  rpc GetArticles(GetArticlesRequest) returns (GetArticlesResponse) {}
  rpc GetArticle(GetArticleRequest) returns (GetArticleResponse) {}
}